# odin-data-dpdk

./: .gitignore  README.md  package-lock.json  package.json
cpp/: CMakeLists.txt
cpp/cmake/: CMakeLists.txt  FindDPDK.cmake
cpp/config/: CMakeLists.txt  DummyCompleteConfig.json  DummyExampleCamera.json  DummyExampleConfig.json  DummyExampleConfig_chunked.json  DummyExampleTensorstore.json  fp_log4cxx.xml
cpp/include/: CMakeLists.txt  DpdkCoreConfiguration.h  DpdkCoreLoader.h  DpdkCoreManager.h  DpdkDevice.h  DpdkFrameProcessorPlugin.h  DpdkSharedBuffer.h  DpdkSharedBufferFrame.h  DpdkUtils.h  DpdkWorkerCore.h  DummyDpdkDecoder.h  DummyDpdkPlugin.h  FrameBuilderConfiguration.h  FrameBuilderCore.h  FrameCompressorConfiguration.h  FrameCompressorCore.h  FrameWrapperCore.h  FrameWrapperCoreConfiguration.h  PacketProcessorCore.h  PacketRxConfiguration.h  PacketRxCore.h  ProtocolDecoder.h  PythonAccessCore.h  PythonAccessCoreConfiguration.h  TensorstoreCore.h  TensorstoreCoreConfiguration.h  dpdk_version_compatibiliy.h  version.h.in
cpp/include/camera/: CameraCaptureCore.h  CameraCaptureCoreConfiguration.h  CameraControlCore.h  CameraControlCoreConfiguration.h  CameraController.h  CameraProtocolDecoder.h  CameraStateMachine.h  DpdkCamera.h  DpdkCameraConfiguration.h  DpdkCameraLoader.h  DpdkCameraStatus.h  DummyDpdkCameraDecoder.h  DummyDpdkCameraPlugin.h  HDF5ImageLoader.h  SimulatedCameraConfiguration.h  SimulatedCameraStatus.h  SimulatedDpdkCamera.h
cpp/include/network/: DpdkDeviceConfiguration.h  DummyDpdkDecoder.h  DummyDpdkPlugin.h  PacketProcessorConfiguration.h  PacketProcessorCore.h  PacketProtocolDecoder.h  PacketRxConfiguration.h  PacketRxCore.h
cpp/include/tensorstore/: TensorstoreCSVLogger.h  TensorstoreCore.h  TensorstoreCoreConfiguration.h  TensorstoreDataset.h  TensorstoreErrorHandler.h  TensorstoreFlushManager.h  TensorstoreJsonSpec.h  TensorstorePerformanceMonitor.h  TensorstoreResizer.h  TensorstoreWriter.h
cpp/src/: CMakeLists.txt  DpdkCoreManager.cpp  DpdkDevice.cpp  DpdkFrameProcessorPlugin.cpp  DpdkSharedBuffer.cpp  DpdkSharedBufferFrame.cpp  DpdkUtils.cpp  DummyDpdkPlugin.cpp  FrameBuilderCore.cpp  FrameCompressorCore.cpp  FrameWrapperCore.cpp  PacketProcessorCore.cpp  PacketRxCore.cpp  PythonAccessCore.cpp  TensorstoreCore.cpp
cpp/src/camera/: CameraCaptureCore.cpp  CameraControlCore.cpp  CameraController.cpp  CameraStateMachine.cpp  DpdkCamera.cpp  DummyDpdkCameraPlugin.cpp  HDF5ImageLoader.cpp  SimulatedDpdkCamera.cpp
cpp/src/network/: DummyDpdkPlugin.cpp  PacketProcessorCore.cpp  PacketRxCore.cpp
cpp/src/tensorstore/: TensorstoreCSVLogger.cpp  TensorstoreCore.cpp  TensorstoreDataset.cpp  TensorstoreErrorHandler.cpp  TensorstoreFlushManager.cpp  TensorstoreJsonSpec.cpp  TensorstorePerformanceMonitor.cpp  TensorstoreResizer.cpp  TensorstoreWriter.cpp
docs/: configuration.md  installation.md
docs/worker_cores/: PacketRxCore.md
performance_testing/: tensorstore_performance_20260115_092644_core0.csv  tensorstore_performance_20260115_092644_core1.csv  tensorstore_performance_20260115_131644_core0.csv  tensorstore_performance_20260115_131644_core1.csv  tensorstore_performance_20260115_131828_core0.csv  tensorstore_performance_20260115_131828_core1.csv  tensorstore_performance_20260115_131917_core0.csv  tensorstore_performance_20260115_131917_core1.csv  tensorstore_performance_20260115_132256_core0.csv  tensorstore_performance_20260115_132256_core1.csv  tensorstore_performance_20260115_132910_core0.csv  tensorstore_performance_20260115_132910_core1.csv  tensorstore_performance_20260120_082036_s3.csv  tensorstore_performance_20260120_091431_file.csv  tensorstore_performance_20260120_114056_file.csv  tensorstore_performance_20260120_140028_file.csv  tensorstore_performance_20260120_140237_file.csv  tensorstore_performance_20260120_140425_file.csv  tensorstore_performance_20260120_140548_file.csv  tensorstore_performance_20260120_140713_file.csv  tensorstore_performance_20260120_140815_file.csv  tensorstore_performance_20260120_140911_file.csv  tensorstore_performance_20260120_140959_file.csv  tensorstore_performance_20260120_141105_file.csv  tensorstore_performance_20260120_141158_file.csv  tensorstore_performance_20260205_134513_file.csv  tensorstore_performance_20260209_082618_file.csv  tensorstore_performance_20260209_082704_file.csv  tensorstore_performance_20260209_082822_file.csv
python/camera-control/: .gitignore  package-lock.json  pyproject.toml
python/camera-control/src/camera_control/: adapter.py  base_adapter.py  camera.py  controller.py
python/camera-control/src/live_data/: base_controller.py  controller.py  live_data_adapter.py  processor.py  util.py
python/camera-control/test/config/: camera.cfg
python/camera-control/test/static/: package-lock.json  package.json
python/camera-control/test/static/camera-control/: package-lock.json  package.json
python/camera-control/test/static/camera-control/src/: App.css  App.jsx  Camera.jsx  PageOne.jsx  PageTwo.jsx  TreeDisplay.jsx  main.jsx
tools/dpdk/dummyPacketGen/: example_nic_config.json  packet_generator.c
tools/dpdk/frame-simulator/: Makefile
tools/python/: TensorStoreViewer.py  TensorstoreViewer.py  liveviewer.py  mode_configs.yaml  odin-gui.py  odin_gui2.py  plot_tensorstore_performance.py  requirements.txt
tools/python/bifrost/: Makefile  README.md  pyproject.toml
tools/python/bifrost/src/odin_data_dpdk/bifrost/: __init__.py  frame_config.py  frame_source.py  frames.py  processor.py  ring.py
tools/python/bifrost/src/odin_data_dpdk/bifrost/sources/: __init__.py  dpdk_source.py  hdf5_source.py
tools/python/bifrost/src/odin_data_dpdk/cpp/include/: dpdk_wrapper.h
tools/python/bifrost/src/odin_data_dpdk/cpp/src/: dpdk_wrapper.cpp
tools/python/frame_inspector/: Makefile  main.py
tools/python/frame_producer/: frame_producer.py
